# mem-grep

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
CI/: build-pipeline-ubuntu.jenkinsfile  build-pipeline.jenkinsfile  trigger.jenkinsfile
docs/: Building.md  BuildingUnitTests.md  SystemConfiguration.md
examples/linked_list/: CMakeLists.txt  analyser.cpp  target.c
lib/: CMakeLists.txt
lib/datastructure-detection/: linkedlist_detection.hpp  stringdetector.cpp  stringdetector.hpp  vector_detector.hpp
lib/datastructures/: bool-vec.cpp  bool-vec.hpp
lib/filtering/: heap-filter.cpp
lib/heap-traversing/: bss-searcher.hpp  heap-traverser.cpp  heap-traverser.hpp  region-scanner.cpp  region-scanner.hpp  stack-searcher.cpp  stack-searcher.hpp  visited-tracker.cpp  visited-tracker.hpp
lib/misc/: map-parser.cpp  map-parser.hpp  prerun-checks.hpp  remote-memory.cpp  remote-memory.hpp  structs.hpp  utils.cpp
src/: analyse-program.hpp  argument-parsing.cpp  argument-parsing.hpp  bss-searcher.cpp  bss-searcher.hpp  deep-copy.cpp  deep-copy.hpp  heap-traverser.cpp  heap-traverser.hpp  main.cpp  main.hpp  malloc-metadata.cpp  malloc-metadata.hpp  map-parser.cpp  map-parser.hpp  memory-searcher.cpp  memory-searcher.hpp  memory-writer.hpp  prerun-checks.cpp  prerun-checks.hpp  remote-memory.cpp  remote-memory.hpp  stack-searcher.cpp  stack-searcher.hpp  utils.cpp  utils.hpp
src/CLI/: main.cpp  main.hpp
src/CLI/argument-parsing/: argument-parsing.cpp  argument-parsing.hpp
src/GUI/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mem-grep.pro  parsing.cpp  parsing.hpp
src/argument-parsing/: argument-parsing.cpp  argument-parsing.hpp
src/filtering/: heap-filter.cpp  heap-filter.hpp  lambda-creator.cpp  lambda-creator.hpp
src/heap-traversing/: bss-searcher.cpp  bss-searcher.hpp  heap-traverser.cpp  heap-traverser.hpp  stack-searcher.cpp  stack-searcher.hpp
src/misc/: malloc-metadata.cpp  malloc-metadata.hpp  map-parser.cpp  map-parser.hpp  prerun-checks.cpp  remote-memory.cpp  remote-memory.hpp  structs.hpp  utils.cpp  utils.hpp
src/shared/: analyse-program.cpp  analyse-program.hpp
src/shared/heap-traversing/: bss-searcher.cpp  heap-traverser.cpp  heap-traverser.hpp  stack-searcher.cpp  stack-searcher.hpp
src/shared/misc/: malloc-metadata.cpp  malloc-metadata.hpp  map-parser.cpp  map-parser.hpp  prerun-checks.cpp  remote-memory.cpp  remote-memory.hpp  structs.cpp  structs.hpp
tests/: CMakeLists.txt  bss-searcher-test.cpp  heap-filter-test.cpp  heap-traverser-test.cpp  map-parser-test.cpp  memory-searcher-test.cpp  null-structs.cpp  null-structs.hpp  prerun-checks-test.cpp  utils.cpp  utils.hpp  visited-tracker-tests.cpp
tests/manual-target-programs/onheapint/: main.c
tests/manual-target-programs/onstackint/: main.c
tests/target-programs/: asmTarget.asm  bssHeapPointers.c  multiLayerBssHeapPointers.c  oneTwoSevenOnStack.c  runUntilManipulatedHeap.c  runUntilManipulatedStack.c  stackMemoryPointingToHeap.c
